# fleet-infoservice

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES.md  Pipfile  README.md  _build.sh  _env_python_setup.sh  _requirements.txt_  build.sh  env_python_setup.sh  env_setup.sh  env_virtual_setup.sh  index.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tech_info.md
.scraper_cache/: readme.txt  scraper_config.yml
.scraper_cache/01-Jun-2021_23-33-57-scraper_morflotru/: 3926-6154-ts_razdel_3.xlsx
.scraper_cache/14-Aug-2021_21-56-36-scraper_rsclassorg/: ships_data.xls
.scraper_cache/21-Jun-2021_23-47-22-scraper_morflotru/: ships_data.xls
.scraper_cache/30-May-2021_23-28-03-scraper_rsclassorg/: base_ships_data.xls
.scraper_db/: readme.txt
.wfleet/: imo_numbers.bak  imo_numbers.csv
.wfleet/.scraper_db/: schema_db_sqlite.sql  scraperdb.sqlite  sqlite_db_reset.sql  sqlite_db_schema.sql
.wfleet/.scraper_raw_files/: readme.txt
.wfleet/.seaweb_db/: imo_nums.csv
.workspace_vscode/: workspace_settings.json
dir/: xxx.com
docs/: 2021 май Инфосервис Русский Кларксон.docx  fleet_info_service.drawio
fleet_scraper/: logging.yml  scraper_archiver.py  scraper_processor.py
fleet_scraper/engine/: scraper_abstract.py  scraper_clarksonsnet.py  scraper_gims.py  scraper_marinetrafficcom.py  scraper_morflotru.py  scraper_rivregru.py  scraper_rsclassorg.py  scraper_vesselfindercom.py
fleet_scraper_tests/: test_logging.yml
fleetinfo-webui-django/: Pipfile  readme.txt
fleetinfo-webui-flask/: Pipfile  readme.txt
jupyter/: simple_notebook.ipynb
jupyter_notebooks/: datetime_playbook.ipynb  general_playbook.ipynb  scraper_playbook.ipynb  seaweb_playbook.ipynb
sql/init/: create_schema.sql
sql/stage/: base_ship_data.sql  registry_book3.sql
tests/: test_dummy.py
wfleet/: scraper_processor.py
wfleet/db/: sqlitedb.py  (+1 more)
(+101 files in other folders)
