###############################################################################
#
#   Python and tools configuration file. Main for the project.
#
#   Created:  Dmitrii Gusev, 01.10.2021
#   Modified: Dmitrii Gusev, 07.11.2021
#
###############################################################################

# -- mypy library config
[mypy]
ignore_missing_imports = True

# -- flake8 library config
[flake8]
# - list of ignored issues (E501 - too long line)
#ignore = E501
# - max cognitive complexity for statements
max-complexity = 10
# - adjustment to align with line length for black (it uses 88 chars by default)
# - we use the value = 110 as a default for the project
max-line-length = 110

# -- pytest library config, moved to pytest.ini
#[tool:pytest]
# - optional - always add these options to pytest call
#addopts = --cov --cov-config=.coveragerc --verbose --cov-report=html --cov-report=xml
#--cov-report=annotate

# -- application / library metadata
[metadata]
name = wfleet.scraper
version = attr: wfleet.scraper.VERSION
description = World Fleet Data Scraper package
author = Dmitrii Gusev
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = fleet, register, scraper
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    urllib3
    requests
    beautifulsoup4
    pyyaml
    pysqlite3
    sqlalchemy
    xlrd
    xlwt
    openpyxl
    prettytable
    pyutilities
    click

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;  sensors = wfleet.scraper.scraper:temp_entry_point
